--- a/lab2.html
+++ b/lab2.html
@@ -7,6 +7,8 @@
 <script type="text/javascript" src="script2_1.js"></script>
 <h3>Your amount of money in rubles</h3>
 <p><script type="text/javascript" src="script2_2.js"></script></p>
+<h3>The date of the next day</h3>
+<script type="text/javascript" src="script2_3.js"></script>
 </head>
 <body>
 
