--- a/lab2.html
+++ b/lab2.html
@@ -9,6 +9,7 @@
 <p><script type="text/javascript" src="script2_2.js"></script></p>
 <h3>The date of the next day</h3>
 <script type="text/javascript" src="script2_3.js"></script>
+<script type="text/javascript" src="script2_4.js"></script>
 </head>
 <body>
 
